@@ -6,17 +6,23 @@ import dormitoryfamily.doomz.domain.follow.exception.CannotFollowYourselfExcepti
 import dormitoryfamily.doomz.domain.follow.exception.NotFollowingMemberException;
 import dormitoryfamily.doomz.domain.follow.repository.FollowRepository;
 import dormitoryfamily.doomz.domain.member.dto.response.MemberProfileListResponseDto;
+import dormitoryfamily.doomz.domain.member.dto.response.MemberProfilePagingListResponseDto;
 import dormitoryfamily.doomz.domain.member.dto.response.MemberProfileResponseDto;
 import dormitoryfamily.doomz.domain.member.entity.Member;
 import dormitoryfamily.doomz.domain.member.exception.MemberNotExistsException;
 import dormitoryfamily.doomz.domain.member.repository.MemberRepository;
 import dormitoryfamily.doomz.global.security.dto.PrincipalDetails;
+import dormitoryfamily.doomz.global.util.SearchRequestDto;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import javax.security.auth.spi.LoginModule;
 import java.util.List;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -72,19 +78,39 @@ public class FollowService {
         followingMember.decreaseFollowerCount();
     }
 
-    public MemberProfileListResponseDto getMyFollowingMemberList(PrincipalDetails principalDetails) {
+    public MemberProfilePagingListResponseDto getMyFollowingMemberList(PrincipalDetails principalDetails, Pageable pageable) {
         Member loginMember = principalDetails.getMember();
-        List<Follow> followings = followRepository.findAllByFollowerOrderByCreatedAtDesc(loginMember);
-        List<MemberProfileResponseDto> memberProfiles = followings.stream()
-                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollowing())).toList();
-        return MemberProfileListResponseDto.toDto(memberProfiles);
+        Page<Follow> followings = followRepository.findAllByFollowerOrderByCreatedAtDesc(loginMember, pageable);
+        List<MemberProfileResponseDto> memberProfiles = followings.getContent().stream()
+                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollowing()))
+                .collect(Collectors.toList());
+        return MemberProfilePagingListResponseDto.toDto(followings, memberProfiles);
     }
 
-    public MemberProfileListResponseDto getMyFollowerMemberList(PrincipalDetails principalDetails) {
+    public MemberProfileListResponseDto searchFollowings(PrincipalDetails principalDetails, SearchRequestDto requestDto) {
         Member loginMember = principalDetails.getMember();
-        List<Follow> followers = followRepository.findAllByFollowingOrderByCreatedAtDesc(loginMember);
-        List<MemberProfileResponseDto> memberProfiles = followers.stream()
-                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollower())).toList();
-        return MemberProfileListResponseDto.toDto(memberProfiles);
+        List<Follow> follows = followRepository.findByFollowerAndFollowingNicknameContaining(loginMember, requestDto.q());
+        List<MemberProfileResponseDto> followings = follows.stream()
+                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollowing()))
+                .collect(Collectors.toList());
+        return MemberProfileListResponseDto.toDto(followings);
+    }
+
+    public MemberProfilePagingListResponseDto getMyFollowerMemberList(PrincipalDetails principalDetails, Pageable pageable) {
+        Member loginMember = principalDetails.getMember();
+        Page<Follow> followers = followRepository.findAllByFollowingOrderByCreatedAtDesc(loginMember, pageable);
+        List<MemberProfileResponseDto> memberProfiles = followers.getContent().stream()
+                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollower()))
+                .collect(Collectors.toList());
+        return MemberProfilePagingListResponseDto.toDto(followers, memberProfiles);
+    }
+
+    public MemberProfileListResponseDto searchFollowers(PrincipalDetails principalDetails, SearchRequestDto requestDto) {
+        Member loginMember = principalDetails.getMember();
+        List<Follow> follows = followRepository.findByFollowingAndFollowerNicknameContaining(loginMember, requestDto.q());
+        List<MemberProfileResponseDto> followers = follows.stream()
+                .map(follow -> MemberProfileResponseDto.fromEntity(follow.getFollower()))
+                .collect(Collectors.toList());
+        return MemberProfileListResponseDto.toDto(followers);
     }
 }
